--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ a
 
 #container
 {
-	max-width: 1600px
+	max-width: 1920px
 	margin: 0 auto;
 
 }
@@ -62,13 +62,21 @@ a
   width: 25%;
   margin: 20px;
   margin-right: auto;
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
 
 }
 
 .mainHeader img:hover
 {
-  transform: scale(1.30);
-  transition: transform .25s ease;
+  
+  -ms-transform: scale(1.2);
+        -moz-transform: scale(1.2);
+        -webkit-transform: scale(1.2);
+        -o-transform: scale(1.2);
+        transform: scale(1.2);
 }
 
 .mainNav
@@ -156,6 +164,149 @@ a
   background-color: #000;
   padding: 7px;
 }
+
+.mainPart
+{
+  display: flex;
+}
+
+.tour
+{
+  background-color: #628bff;
+  margin-top: 110px;
+  width: 690px;
+  height: 620px;
+  margin-right: auto;
+  margin-left: 134px;
+  border-radius: 20px;
+  background-image: url(../images/logo/logo_main_low.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 700px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+
+  
+}
+
+.tour li:hover
+{
+  -ms-transform: scale(1.2);
+        -moz-transform: scale(1.2);
+        -webkit-transform: scale(1.2);
+        -o-transform: scale(1.2);
+        transform: scale(1.2);
+
+}
+
+
+.tour li
+{
+ 
+ -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+  text-align: center;
+  font-size: 50px;
+  text-shadow: 2px 0.5px #ffffff;
+  height: 100px;
+  padding: 200px;
+  list-style-type: none;
+  
+}
+
+.tour a
+{
+  color: #000000;
+}
+
+
+.videosTop
+{
+ 
+  margin-top: 105px;
+  height: 300px;
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+  margin-right: 50px;
+
+
+}
+
+.videosTop:hover
+{
+  -ms-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        -o-transform: scale(1.1);
+        transform: scale(1.1);
+
+
+}
+
+.careers
+{
+ height: 250px;
+  width: 500px;
+  margin-top: 20px;
+}
+
+.brands
+{
+height: 250px;
+  width: 500px;
+
+}
+
+.videosBottom
+{
+  
+  margin-top: 34px;
+  height: 300px;
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+  margin-right: 50px;
+}
+
+.videosBottom:hover
+{
+
+        -ms-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        -o-transform: scale(1.1);
+        transform: scale(1.1);
+
+}
+
+.process
+{
+  height: 250px;
+  width: 500px;
+  margin-top: 20px;
+
+}
+
+.clothes
+{
+   height: 250px;
+  width: 500px;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
